feat: update to 1.3.4
Signed-off-by: Han Gao <gaohan@iscas.ac.cn>