@@ -209,7 +209,7 @@ public abstract class BDFileSystem extends FileSystem {
 
         String resolvedPath = fs.resolve(parent, child);
         String cachePath = BDJLoader.getCachedFile(resolvedPath);
-        if (cachePath != resolvedPath && !cachePath.equals(resolvedPath)) {
+        if (!cachePath.equals(resolvedPath)) {
             logger.info("resolve(p,c): using cached " + cachePath + " (" + resolvedPath + ")");
         }
         return cachePath;
@@ -227,6 +227,19 @@ public abstract class BDFileSystem extends FileSystem {
         return fs.isAbsolute(f);
     }
 
+    public boolean isInvalid(File f) {
+        boolean res = false;
+        try {
+            Method m = fs.getClass().getDeclaredMethod("isInvalid", new Class[] { File.class });
+            Object[] args = new Object[] {(Object)f};
+            Boolean result = (Boolean)m.invoke(fs, args);
+            res = result.booleanValue();
+        } finally {
+            /* return here will drop all exceptions from try block (and override possible return value from try block) */
+            return res;
+        }
+    }
+
     public String resolve(File f) {
         if (!booted)
             return fs.resolve(f);
@@ -238,7 +251,7 @@ public abstract class BDFileSystem extends FileSystem {
 
         String resolvedPath = fs.resolve(f);
         String cachePath = BDJLoader.getCachedFile(resolvedPath);
-        if (cachePath != resolvedPath && !cachePath.equals(resolvedPath)) {
+        if (!cachePath.equals(resolvedPath)) {
             logger.info("resolve(f): using cached " + cachePath + " (" + resolvedPath + ")");
         }
         return cachePath;
@@ -250,7 +263,7 @@ public abstract class BDFileSystem extends FileSystem {
 
         String canonPath = fs.canonicalize(path);
         String cachePath = BDJLoader.getCachedFile(canonPath);
-        if (cachePath != canonPath && !cachePath.equals(canonPath)) {
+        if (!cachePath.equals(canonPath)) {
             logger.info("canonicalize(): Using cached " + cachePath + " for " + canonPath + "(" + path + ")");
         }
         return cachePath;
@@ -332,7 +345,7 @@ public abstract class BDFileSystem extends FileSystem {
                 args = new Object[] {(Object)path};
             } catch (NoSuchMethodException e) {
                 m  = fs.getClass().getDeclaredMethod("createFileExclusively", new Class[] { String.class, boolean.class });
-                args = new Object[] {(Object)path, (Object)new Boolean(restrictive)};
+                args = new Object[] {(Object)path, (Object)Boolean.valueOf(restrictive)};
             }
         } catch (NoSuchMethodException e) {
             error("no matching FileSystem.createFileExclusively found !");
